# 8ssou.github.io

./: .gitmodules  .travis.yml  8ssou-github-io.cabal  BingSiteAuth.xml  about.html  about.rst  archive.html  contact.html  contact.markdown  index.html  main.yml  site.hs
.github/workflows/: main.yml
css/: default.css  default.scss
posts/: 2012-08-12-spqr.html  2012-10-07-rosa-rosa-rosam.html  2012-11-28-carpe-diem.html  2012-12-07-tu-quoque.html  2016-02-25-create-blog.html  2016-02-25-create-blog.markdown  2016-03-01-legacy-and-modern-one.html  2016-03-01-legacy-and-modern-one.markdown  2016-03-06-for-to-teach.html  2016-03-06-for-to-teach.markdown  2016-03-11-for-to-teach.markdown  2016-03-28-severe-person.markdown  2016-05-18-severe-person.html  2016-05-18-severe-person.markdown  2016-11-20-girlpan-impression.html  2016-11-20-girlpan-impression.markdown  2017-12-31-of-twenty.html  2017-12-31-of-twenty.markdown  2023-03-09-human-race-have-trouble-with-science.html  2023-03-09-human-race-have-trouble-with-science.markdown
tag/: book.html  diary.html  essay.html
templates/: default.html  post-list.html  post.html
