cabal-version:      3.4
name:               8ssou-github-io
version:            0.2.0.0
build-type:         Simple

executable site
  main-is:          site.hs
  build-depends:    hakyll
                  , base == 4.14.1.0
                  , mtl
                  , hlibsass
                  , hakyll-sass
                  , attoparsec == 0.13.2.5
                  , pandoc == 2.10.1
                  , pandoc-citeproc == 0.17.0.2
  ghc-options:      -threaded
  default-language: Haskell2010
