cabal-version:      3.4
name:               8ssou-github-io
version:            0.2.0.0
build-type:         Simple

executable site
  main-is:          site.hs
  build-depends:    hakyll
                  , base
                  , mtl
                  , hlibsass
                  , hakyll-sass
                  , attoparsec
                  , pandoc
                  , citeproc
  ghc-options:      -threaded
  default-language: Haskell2010
